<?xml version="1.0" encoding="utf-8"?>
<!--Authors: Luke Burton & James Morrisey
    Purpose: Activity to run a blackjack game tutorial
    Date: 21/02/2016-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg_felt"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/root"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.james.card_app.MainGame">

    <TextView
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:maxLines="15"
        android:scrollbars="vertical"
        android:id="@+id/tutorialText"
        android:textColor="#FFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:id="@+id/backbutton"
        android:src="@drawable/backbutton"
        android:contentDescription="@string/backbutton"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextTutorialPageButton"
        android:id="@+id/nextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tutorialText"
        android:layout_alignEnd="@+id/tutorialText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitAction"
        android:id="@+id/hitButton"
        android:layout_below="@+id/button3"
        android:layout_toLeftOf="@+id/backbutton"
        android:layout_toStartOf="@+id/backbutton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standAction"
        android:id="@+id/button2"
        android:layout_below="@+id/hitButton"
        android:layout_alignRight="@+id/hitButton"
        android:layout_alignEnd="@+id/hitButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splitAction"
        android:id="@+id/button3"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_alignBottom="@+id/tutorialText"
        android:layout_toRightOf="@+id/tutorialText"
        android:layout_toEndOf="@+id/tutorialText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surrenderAction"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insuranceAction"
        android:id="@+id/button5"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doubleDownAction"
        android:id="@+id/button6"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <ImageView
        android:id="@+id/frame_animation"
        android:layout_width="105dp"
        android:layout_height="95dp"
        android:background="@drawable/frame_animation_list"
        android:layout_above="@+id/nextButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp" />
</RelativeLayout>
