<?xml version="1.0" encoding="utf-8"?>
<!--Authors: Luke Burton & James Morrisey
    Purpose: Main menu activity
    Date: 21/02/2016-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:background="@drawable/bg_felt">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playbutton"
        android:src="@drawable/playbutton"
        android:contentDescription="@string/playButton"
        android:background="@null"
        android:layout_above="@+id/settingsbutton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/applogo"
        android:paddingBottom="200dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:contentDescription="@string/logoImage" />



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsbutton"
        android:src="@drawable/settings"
        android:contentDescription="@string/settingsButton"
        android:background="@null"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
