<?xml version="1.0" encoding="utf-8"?>
<!--Authors: Luke Burton & James Morrisey
    Purpose: Activity to allow users to change settings in the app
    Date: 21/02/2016-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_felt"
    tools:context="com.example.james.card_app.SettingsMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settingsTitle"
        android:textSize="60sp"
        android:textColor="#FFFFFF"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textSize"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/volume"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <SeekBar
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarVolume"
        android:progressDrawable="@drawable/progress"
        android:thumb="@drawable/thumb"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_alignStart="@+id/seekBar" />

    <SeekBar
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:progressDrawable="@drawable/progress"
        android:thumb="@drawable/thumb"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampleText"
        android:textColor="#FFFFFF"
        android:id="@+id/tutorialText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:id="@+id/imageButton"
        android:background="@drawable/exitbutton"
        android:contentDescription="@string/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/font_array"
        android:textColor="#FFFFFF"
        android:spinnerMode="dropdown"
        android:layout_above="@+id/imageButton"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/font"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:id="@+id/textView7"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
