<?xml version="1.0" encoding="utf-8"?>
<!--Authors: Luke Burton & James Morrisey
    Purpose: Activity to search for card game tutorials
    Date: 21/02/2016-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.ncl.team16.luke.search.Search"
    android:background="@drawable/bg_felt">

    <!--Title-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/searchTitle"
        android:id="@+id/title"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="normal"
        android:paddingBottom="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--Search bar-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchInput"
        android:textColor="#000000"
        android:background="#ffffff"
        android:inputType="text"
        android:textStyle="normal"
        android:paddingBottom="5dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--Results-->

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/searchResults"
        android:background="#ffffff"
        android:paddingBottom="5dp"
        android:layout_below="@+id/searchInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--Navigational buttons-->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backbutton"
        android:src="@drawable/backbutton"
        android:contentDescription="@string/backButton"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsbutton"
        android:src="@drawable/settings"
        android:contentDescription="@string/settingsButton"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
